--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
-    <title>Grorie</title>
-    <link rel="stylesheet" href="/style.css" />
+    <title>MEAL :P</title>
+
+    <link rel="stylesheet" href="styles/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <script defer src="/bundle.js"></script>
+    <script src="https://kit.fontawesome.com/d3aab43e45.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
