--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
+    <!-- <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" /> -->
+
     <title>MEAL :P</title>
 
     <link rel="stylesheet" href="styles/style.css" />
