--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
     <title>MEAL :P</title>
 
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <script defer src="/bundle.js"></script>
     <script src="https://kit.fontawesome.com/d3aab43e45.js" crossorigin="anonymous"></script>
